version/0.5/_sources/api/ansys/geometry/core/designer/beam/index.rst.txt






The ``beam.py`` module
======================

.. py:module:: ansys.geometry.core.designer.beam


Summary
-------














.. py:currentmodule:: beam
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.geometry.core.designer.beam.BeamProfile`
            - Represents a single beam profile organized within the design assembly.


          * - :py:obj:`~ansys.geometry.core.designer.beam.BeamCircularProfile`
            - Represents a single circular beam profile organized within the design assembly.


          * - :py:obj:`~ansys.geometry.core.designer.beam.Beam`
            - Represents a simplified solid body with an assigned 2D cross-section.












.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_class"></span> BeamProfile</api/ansys/geometry/core/designer/beam/BeamProfile>
    <span class="nf nf-cod-symbol_class"></span> BeamCircularProfile</api/ansys/geometry/core/designer/beam/BeamCircularProfile>
    <span class="nf nf-cod-symbol_class"></span> Beam</api/ansys/geometry/core/designer/beam/Beam>









Description
-----------

Provides for creating and managing a beam.

..
    !! processed by numpydoc !!







